CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ADD_DEFINITIONS(-std=c++11)

PROJECT(parafem)

# OPTIONS
OPTION(BUILD_TESTS "test require vtk" ON)
OPTION(BUILD_PYTHON_BINDINGS "create python bindings" ON)
OPTION(BUILD_JSON "json in out" ON)

# DEPENDENCIES
FIND_PACKAGE(OpenMP)

IF(OPENMP_FOUND)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   ${OpenMP_C_FLAGS}")
ENDIF()

ADD_SUBDIRECTORY("src/")

IF (BUILD_TESTS)
    ADD_SUBDIRECTORY("tests/")
ENDIF(BUILD_TESTS)